Bug 1876506 - Always update the cached transaction ID for accelerated/remote canvas for empty transactions.